fix z-index to about

--- a/css/about.css
+++ b/css/about.css
@@ -18,7 +18,6 @@
 		font-weight: 800;
 		padding-bottom: 1.5rem;
 
-		z-index: 100000;
 }
 .main-container .about p a{
 	color: gray;
@@ -27,7 +26,6 @@
 	color: gray;
 	font-size: 1.6rem;
 	max-width: 850px;
-	z-index: 100000;
 }
 .main-container .about #underline{
 	padding: 1rem 0;
